// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Should disable delete icon while loading 1`] = `
<div
  className="root_disabled"
>
  <div
    className="thumbnailContainer"
    to="/product"
  >
    <div
      className="root container"
    >
      <img
        alt="P1"
        aria-hidden="true"
        className="image placeholder"
        loading="eager"
        src="data:image/svg+xml;base64,PHN2ZyB4bWxucz0naHR0cDovL3d3dy53My5vcmcvMjAwMC9zdmcnIHdpZHRoPSc0JyBoZWlnaHQ9JzUnPjxyZWN0IHdpZHRoPSc0JyBoZWlnaHQ9JzUnIHN0eWxlPSdmaWxsOiBub25lJyAvPjwvc3ZnPg=="
        style={
          Object {
            "--width": "100px",
          }
        }
        width={100}
      />
      <img
        alt="P1"
        className="image notLoaded"
        loading="lazy"
        onError={[Function]}
        onLoad={[Function]}
        sizes="100px"
        src="/media/catalog/product/www.venia.com/p1?auto=webp&format=pjpg&width=100&height=125&fit=cover"
        srcSet="/media/catalog/product/www.venia.com/p1?auto=webp&format=pjpg&width=40&height=50&fit=cover 40w,
/media/catalog/product/www.venia.com/p1?auto=webp&format=pjpg&width=80&height=100&fit=cover 80w,
/media/catalog/product/www.venia.com/p1?auto=webp&format=pjpg&width=160&height=200&fit=cover 160w,
/media/catalog/product/www.venia.com/p1?auto=webp&format=pjpg&width=320&height=400&fit=cover 320w,
/media/catalog/product/www.venia.com/p1?auto=webp&format=pjpg&width=640&height=800&fit=cover 640w,
/media/catalog/product/www.venia.com/p1?auto=webp&format=pjpg&width=960&height=1200&fit=cover 960w,
/media/catalog/product/www.venia.com/p1?auto=webp&format=pjpg&width=1280&height=1600&fit=cover 1280w,
/media/catalog/product/www.venia.com/p1?auto=webp&format=pjpg&width=1600&height=2000&fit=cover 1600w,
/media/catalog/product/www.venia.com/p1?auto=webp&format=pjpg&width=2560&height=3200&fit=cover 2560w"
        style={
          Object {
            "--height": "125px",
            "--width": "100px",
          }
        }
        width={100}
      />
    </div>
  </div>
  <div
    className="name"
    to="/product"
  >
    P1
  </div>
  <dl
    className="options"
  >
    <div
      className="optionLabel"
    >
      <dt
        className="optionName"
      >
        Color :
      </dt>
      <dd
        className="optionValue"
      >
        red
      </dd>
    </div>
  </dl>
  <span
    className="quantity"
  >
    <mock-FormattedMessage
      defaultMessage="Qty : {quantity}"
      id="productList.quantity"
      values={
        Object {
          "quantity": 10,
        }
      }
    />
  </span>
  <span
    className="price"
  >
    <span>
      $
    </span>
    <span>
      420
    </span>
    <span>
      .
    </span>
    <span>
      00
    </span>
    <mock-FormattedMessage
      defaultMessage=" ea."
      id="productList.each"
    />
  </span>
  <span
    className="stockStatus"
  >
    
  </span>
  <button
    aria-label="Item Deleted"
    className="deleteButton"
    disabled={true}
    onClick={[Function]}
    type="button"
  >
    <span
      className="root"
    >
      <svg
        className="icon"
        fill="none"
        height={16}
        stroke="currentColor"
        strokeLinecap="round"
        strokeLinejoin="round"
        strokeWidth="2"
        viewBox="0 0 24 24"
        width={16}
        xmlns="http://www.w3.org/2000/svg"
      >
        <polyline
          points="3 6 5 6 21 6"
        />
        <path
          d="M19 6v14a2 2 0 0 1-2 2H7a2 2 0 0 1-2-2V6m3 0V4a2 2 0 0 1 2-2h4a2 2 0 0 1 2 2v2"
        />
        <line
          x1="10"
          x2="10"
          y1="11"
          y2="17"
        />
        <line
          x1="14"
          x2="14"
          y1="11"
          y2="17"
        />
      </svg>
    </span>
  </button>
  <span
    aria-hidden="false"
    aria-live="polite"
    className="hide"
    role="status"
  >
    There is only one item left in your cart
  </span>
</div>
`;

exports[`Should render correctly 1`] = `
<div
  className="root"
>
  <div
    className="thumbnailContainer"
    to="/product"
  >
    <div
      className="root container"
    >
      <img
        alt="P1"
        aria-hidden="true"
        className="image placeholder"
        loading="eager"
        src="data:image/svg+xml;base64,PHN2ZyB4bWxucz0naHR0cDovL3d3dy53My5vcmcvMjAwMC9zdmcnIHdpZHRoPSc0JyBoZWlnaHQ9JzUnPjxyZWN0IHdpZHRoPSc0JyBoZWlnaHQ9JzUnIHN0eWxlPSdmaWxsOiBub25lJyAvPjwvc3ZnPg=="
        style={
          Object {
            "--width": "100px",
          }
        }
        width={100}
      />
      <img
        alt="P1"
        className="image notLoaded"
        loading="lazy"
        onError={[Function]}
        onLoad={[Function]}
        sizes="100px"
        src="/media/catalog/product/www.venia.com/p1?auto=webp&format=pjpg&width=100&height=125&fit=cover"
        srcSet="/media/catalog/product/www.venia.com/p1?auto=webp&format=pjpg&width=40&height=50&fit=cover 40w,
/media/catalog/product/www.venia.com/p1?auto=webp&format=pjpg&width=80&height=100&fit=cover 80w,
/media/catalog/product/www.venia.com/p1?auto=webp&format=pjpg&width=160&height=200&fit=cover 160w,
/media/catalog/product/www.venia.com/p1?auto=webp&format=pjpg&width=320&height=400&fit=cover 320w,
/media/catalog/product/www.venia.com/p1?auto=webp&format=pjpg&width=640&height=800&fit=cover 640w,
/media/catalog/product/www.venia.com/p1?auto=webp&format=pjpg&width=960&height=1200&fit=cover 960w,
/media/catalog/product/www.venia.com/p1?auto=webp&format=pjpg&width=1280&height=1600&fit=cover 1280w,
/media/catalog/product/www.venia.com/p1?auto=webp&format=pjpg&width=1600&height=2000&fit=cover 1600w,
/media/catalog/product/www.venia.com/p1?auto=webp&format=pjpg&width=2560&height=3200&fit=cover 2560w"
        style={
          Object {
            "--height": "125px",
            "--width": "100px",
          }
        }
        width={100}
      />
    </div>
  </div>
  <div
    className="name"
    to="/product"
  >
    P1
  </div>
  <dl
    className="options"
  >
    <div
      className="optionLabel"
    >
      <dt
        className="optionName"
      >
        Color :
      </dt>
      <dd
        className="optionValue"
      >
        red
      </dd>
    </div>
  </dl>
  <span
    className="quantity"
  >
    <mock-FormattedMessage
      defaultMessage="Qty : {quantity}"
      id="productList.quantity"
      values={
        Object {
          "quantity": 10,
        }
      }
    />
  </span>
  <span
    className="price"
  >
    <span>
      $
    </span>
    <span>
      420
    </span>
    <span>
      .
    </span>
    <span>
      00
    </span>
    <mock-FormattedMessage
      defaultMessage=" ea."
      id="productList.each"
    />
  </span>
  <span
    className="stockStatus"
  >
    
  </span>
  <button
    aria-label="Delete"
    className="deleteButton"
    disabled={false}
    onClick={[Function]}
    type="button"
  >
    <span
      className="root"
    >
      <svg
        className="icon"
        fill="none"
        height={16}
        stroke="currentColor"
        strokeLinecap="round"
        strokeLinejoin="round"
        strokeWidth="2"
        viewBox="0 0 24 24"
        width={16}
        xmlns="http://www.w3.org/2000/svg"
      >
        <polyline
          points="3 6 5 6 21 6"
        />
        <path
          d="M19 6v14a2 2 0 0 1-2 2H7a2 2 0 0 1-2-2V6m3 0V4a2 2 0 0 1 2-2h4a2 2 0 0 1 2 2v2"
        />
        <line
          x1="10"
          x2="10"
          y1="11"
          y2="17"
        />
        <line
          x1="14"
          x2="14"
          y1="11"
          y2="17"
        />
      </svg>
    </span>
  </button>
  <span
    aria-hidden="false"
    aria-live="polite"
    className="hide"
    role="status"
  >
    There is only one item left in your cart
  </span>
</div>
`;

exports[`Should render correctly when configured to use variant thumbnail 1`] = `
<div
  className="root"
>
  <div
    className="thumbnailContainer"
    to="/product"
  >
    <div
      className="root container"
    >
      <img
        alt="P1"
        aria-hidden="true"
        className="image placeholder"
        loading="eager"
        src="data:image/svg+xml;base64,PHN2ZyB4bWxucz0naHR0cDovL3d3dy53My5vcmcvMjAwMC9zdmcnIHdpZHRoPSc0JyBoZWlnaHQ9JzUnPjxyZWN0IHdpZHRoPSc0JyBoZWlnaHQ9JzUnIHN0eWxlPSdmaWxsOiBub25lJyAvPjwvc3ZnPg=="
        style={
          Object {
            "--width": "100px",
          }
        }
        width={100}
      />
      <img
        alt="P1"
        className="image notLoaded"
        loading="lazy"
        onError={[Function]}
        onLoad={[Function]}
        sizes="100px"
        src="/media/catalog/product/www.venia.com/p1-variant1?auto=webp&format=pjpg&width=100&height=125&fit=cover"
        srcSet="/media/catalog/product/www.venia.com/p1-variant1?auto=webp&format=pjpg&width=40&height=50&fit=cover 40w,
/media/catalog/product/www.venia.com/p1-variant1?auto=webp&format=pjpg&width=80&height=100&fit=cover 80w,
/media/catalog/product/www.venia.com/p1-variant1?auto=webp&format=pjpg&width=160&height=200&fit=cover 160w,
/media/catalog/product/www.venia.com/p1-variant1?auto=webp&format=pjpg&width=320&height=400&fit=cover 320w,
/media/catalog/product/www.venia.com/p1-variant1?auto=webp&format=pjpg&width=640&height=800&fit=cover 640w,
/media/catalog/product/www.venia.com/p1-variant1?auto=webp&format=pjpg&width=960&height=1200&fit=cover 960w,
/media/catalog/product/www.venia.com/p1-variant1?auto=webp&format=pjpg&width=1280&height=1600&fit=cover 1280w,
/media/catalog/product/www.venia.com/p1-variant1?auto=webp&format=pjpg&width=1600&height=2000&fit=cover 1600w,
/media/catalog/product/www.venia.com/p1-variant1?auto=webp&format=pjpg&width=2560&height=3200&fit=cover 2560w"
        style={
          Object {
            "--height": "125px",
            "--width": "100px",
          }
        }
        width={100}
      />
    </div>
  </div>
  <div
    className="name"
    to="/product"
  >
    P1
  </div>
  <dl
    className="options"
  >
    <div
      className="optionLabel"
    >
      <dt
        className="optionName"
      >
        Color :
      </dt>
      <dd
        className="optionValue"
      >
        red
      </dd>
    </div>
  </dl>
  <span
    className="quantity"
  >
    <mock-FormattedMessage
      defaultMessage="Qty : {quantity}"
      id="productList.quantity"
      values={
        Object {
          "quantity": 10,
        }
      }
    />
  </span>
  <span
    className="price"
  >
    <span>
      $
    </span>
    <span>
      420
    </span>
    <span>
      .
    </span>
    <span>
      00
    </span>
    <mock-FormattedMessage
      defaultMessage=" ea."
      id="productList.each"
    />
  </span>
  <span
    className="stockStatus"
  >
    
  </span>
  <button
    aria-label="Delete"
    className="deleteButton"
    disabled={false}
    onClick={[Function]}
    type="button"
  >
    <span
      className="root"
    >
      <svg
        className="icon"
        fill="none"
        height={16}
        stroke="currentColor"
        strokeLinecap="round"
        strokeLinejoin="round"
        strokeWidth="2"
        viewBox="0 0 24 24"
        width={16}
        xmlns="http://www.w3.org/2000/svg"
      >
        <polyline
          points="3 6 5 6 21 6"
        />
        <path
          d="M19 6v14a2 2 0 0 1-2 2H7a2 2 0 0 1-2-2V6m3 0V4a2 2 0 0 1 2-2h4a2 2 0 0 1 2 2v2"
        />
        <line
          x1="10"
          x2="10"
          y1="11"
          y2="17"
        />
        <line
          x1="14"
          x2="14"
          y1="11"
          y2="17"
        />
      </svg>
    </span>
  </button>
  <span
    aria-hidden="false"
    aria-live="polite"
    className="hide"
    role="status"
  >
    There is only one item left in your cart
  </span>
</div>
`;

exports[`Should render correctly with out of stock product 1`] = `
<div
  className="root"
>
  <div
    className="thumbnailContainer"
    to="/product"
  >
    <div
      className="root container"
    >
      <img
        alt="P1"
        aria-hidden="true"
        className="image placeholder"
        loading="eager"
        src="data:image/svg+xml;base64,PHN2ZyB4bWxucz0naHR0cDovL3d3dy53My5vcmcvMjAwMC9zdmcnIHdpZHRoPSc0JyBoZWlnaHQ9JzUnPjxyZWN0IHdpZHRoPSc0JyBoZWlnaHQ9JzUnIHN0eWxlPSdmaWxsOiBub25lJyAvPjwvc3ZnPg=="
        style={
          Object {
            "--width": "100px",
          }
        }
        width={100}
      />
      <img
        alt="P1"
        className="image notLoaded"
        loading="lazy"
        onError={[Function]}
        onLoad={[Function]}
        sizes="100px"
        src="/media/catalog/product/www.venia.com/p1?auto=webp&format=pjpg&width=100&height=125&fit=cover"
        srcSet="/media/catalog/product/www.venia.com/p1?auto=webp&format=pjpg&width=40&height=50&fit=cover 40w,
/media/catalog/product/www.venia.com/p1?auto=webp&format=pjpg&width=80&height=100&fit=cover 80w,
/media/catalog/product/www.venia.com/p1?auto=webp&format=pjpg&width=160&height=200&fit=cover 160w,
/media/catalog/product/www.venia.com/p1?auto=webp&format=pjpg&width=320&height=400&fit=cover 320w,
/media/catalog/product/www.venia.com/p1?auto=webp&format=pjpg&width=640&height=800&fit=cover 640w,
/media/catalog/product/www.venia.com/p1?auto=webp&format=pjpg&width=960&height=1200&fit=cover 960w,
/media/catalog/product/www.venia.com/p1?auto=webp&format=pjpg&width=1280&height=1600&fit=cover 1280w,
/media/catalog/product/www.venia.com/p1?auto=webp&format=pjpg&width=1600&height=2000&fit=cover 1600w,
/media/catalog/product/www.venia.com/p1?auto=webp&format=pjpg&width=2560&height=3200&fit=cover 2560w"
        style={
          Object {
            "--height": "125px",
            "--width": "100px",
          }
        }
        width={100}
      />
    </div>
  </div>
  <div
    className="name"
    to="/product"
  >
    P1
  </div>
  <dl
    className="options"
  >
    <div
      className="optionLabel"
    >
      <dt
        className="optionName"
      >
        Color :
      </dt>
      <dd
        className="optionValue"
      >
        red
      </dd>
    </div>
  </dl>
  <span
    className="quantity"
  >
    <mock-FormattedMessage
      defaultMessage="Qty : {quantity}"
      id="productList.quantity"
      values={
        Object {
          "quantity": 10,
        }
      }
    />
  </span>
  <span
    className="price"
  >
    <span>
      $
    </span>
    <span>
      420
    </span>
    <span>
      .
    </span>
    <span>
      00
    </span>
    <mock-FormattedMessage
      defaultMessage=" ea."
      id="productList.each"
    />
  </span>
  <span
    className="stockStatus"
  >
    Out-of-stock
  </span>
  <button
    aria-label="Delete"
    className="deleteButton"
    disabled={false}
    onClick={[Function]}
    type="button"
  >
    <span
      className="root"
    >
      <svg
        className="icon"
        fill="none"
        height={16}
        stroke="currentColor"
        strokeLinecap="round"
        strokeLinejoin="round"
        strokeWidth="2"
        viewBox="0 0 24 24"
        width={16}
        xmlns="http://www.w3.org/2000/svg"
      >
        <polyline
          points="3 6 5 6 21 6"
        />
        <path
          d="M19 6v14a2 2 0 0 1-2 2H7a2 2 0 0 1-2-2V6m3 0V4a2 2 0 0 1 2-2h4a2 2 0 0 1 2 2v2"
        />
        <line
          x1="10"
          x2="10"
          y1="11"
          y2="17"
        />
        <line
          x1="14"
          x2="14"
          y1="11"
          y2="17"
        />
      </svg>
    </span>
  </button>
  <span
    aria-hidden="false"
    aria-live="polite"
    className="hide"
    role="status"
  >
    There is only one item left in your cart
  </span>
</div>
`;
